--- a/pricing_calculator_V2.html
+++ b/pricing_calculator_V2.html
@@ -136,7 +136,7 @@
 
         <!-- Project Inputs -->
         <div class="input-group">
-            <label for="conditionedArea">Total Conditioned Area [sq ft]:</label>
+            <label for="conditionedArea">Total Covered Area [sq ft]:</label>
             <input type="number" id="conditionedArea" value="2000" placeholder="e.g., 2000">
         </div>
         <div class="input-group">
@@ -347,3 +347,4 @@
     </script>
 </body>
 </html>
+
